--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "bulma": "^0.4.0",
     "fs-jetpack": "^0.10.2",
+    "rita": "^1.1.51",
     "sentiment": "^3.0.0",
     "vue": "^2.1.10"
   },
