--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "productName": "Electron Boilerplate",
   "description": "Starter for your Electron application",
   "version": "0.0.0",
-  "author": "Mr. Gumby <mr.gumby@example.com>",
-  "copyright": "© 2016, Gumby inc.",
-  "homepage": "http://example.com",
+  "author": "Corey Robinson",
+  "copyright": "© 2016, Gato Verde",
+  "homepage": "http://coreyrobinson.us",
   "license": "MIT",
+  "eslintConfig": {
+        "env": {
+            "browser": true,
+            "node": true
+        }
+  },
   "main": "app/background.js",
   "build": {
     "appId": "com.example.electron-boilerplate",
