Users now have feelings about your posts. Progress bars in place, need to create level system."

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 {
     "editor.minimap.enabled": true,
     "editor.wordWrap": "on",
-    "editor.renderIndentGuides": true
+    "editor.renderIndentGuides": true,
+    "vsicons.presets.angular": false
 }
