--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "dev": "routify -c my-server",
+    "my-server": "rollup -c -w",
+    "start": "sirv public --single",
     "validate": "svelte-check"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-typescript": "^4.0.0",
+    "@sveltech/routify": "^1.9.7",
     "@tsconfig/svelte": "^1.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^1.0.0",
@@ -26,8 +28,9 @@
     "@rollup/plugin-json": "^4.1.0",
     "jdenticon": "^2.2.0",
     "node-sass": "^4.14.1",
+    "pouchdb": "^7.2.2",
     "sentiment": "^5.0.2",
-    "sirv-cli": "^0.4.4",
-    "svelte-spa-router": "^2.2.0"
+    "shortid": "^2.2.15",
+    "sirv-cli": "^0.4.4"
   }
 }
